--- a/src/1_gathering/db/Makefile
+++ b/src/1_gathering/db/Makefile
@@ -53,8 +53,8 @@ alkamid: ${INTERIM_DB_PATH}/alkamid.tsv.gz
 ${INTERIM_DB_PATH}/alkamid.tsv.gz: ${EXTERNAL_DB_SOURCE_PATH}/alkamid/alkamidScraped.tsv.gz ${EXTERNAL_DB_SOURCE_PATH}/alkamid/alkamidRefScraped.tsv.gz ${SRC_GATHERING_DB_PATH}/alkamid/standardizing.R
 	cd ${PWD}/src && Rscript ${SRC_GATHERING_DB_PATH}/alkamid/standardizing.R
 
-alkamid-scrape: ${EXTERNAL_DB_SOURCE_PATH}/alkamid/alkamidScraped.tsv.gz ${EXTERNAL_DB_SOURCE_PATH}/alkamid/alkamidRefScraped.tsv.gz
-${EXTERNAL_DB_SOURCE_PATH}/alkamid/alkamidScraped.tsv.gz ${EXTERNAL_DB_SOURCE_PATH}/alkamid/alkamidRefScraped.tsv.gz: ${SRC_GATHERING_DB_PATH}/alkamid/scraping.R
+alkamid-scrape: # ${EXTERNAL_DB_SOURCE_PATH}/alkamid/alkamidScraped.tsv.gz ${EXTERNAL_DB_SOURCE_PATH}/alkamid/alkamidRefScraped.tsv.gz
+# ${EXTERNAL_DB_SOURCE_PATH}/alkamid/alkamidScraped.tsv.gz ${EXTERNAL_DB_SOURCE_PATH}/alkamid/alkamidRefScraped.tsv.gz: ${SRC_GATHERING_DB_PATH}/alkamid/scraping.R
 	cd ${PWD}/src && Rscript ${SRC_GATHERING_DB_PATH}/alkamid/scraping.R
 
 antibase: ${INTERIM_DB_PATH}/antibase.tsv.gz
