--- a/src/1_gathering/translation/Makefile
+++ b/src/1_gathering/translation/Makefile
@@ -19,7 +19,7 @@ ${EXTERNAL_TRANSLATION_SOURCE_PATH}/tcm/Chinese-Medicine-Board---List---Nomencla
 
 gathering-pmcid: ${EXTERNAL_TRANSLATION_SOURCE_PATH}/pubmed/PMC-ids.csv.zip
 ${EXTERNAL_TRANSLATION_SOURCE_PATH}/pubmed/PMC-ids.csv.zip: ${SRC_GATHERING_TRANSLATION_PATH}/get_pmcid.sh
-	cd ${PWD}/src && bash ${SRC_GATHERING_TRANSLATION_PATH}/get_pcmid.sh
+	cd ${PWD}/src && bash ${SRC_GATHERING_TRANSLATION_PATH}/get_pmcid.sh
 
 gathering-translation-tcmid: $(wildcard ${EXTERNAL_TRANSLATION_SOURCE_PATH}/tcm/tcmid/**)
 $(wildcard ${EXTERNAL_TRANSLATION_SOURCE_PATH}/tcm/tcmid/**):	
