--- a/.github/workflows/testing_full.yml
+++ b/.github/workflows/testing_full.yml
@@ -11,22 +11,12 @@ jobs:
       max-parallel: 3
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+    - uses: conda-incubator/setup-miniconda@v2
       with:
+        activate-environment: lotus_env
+        environment-file: environment.yml
         python-version: 3.8
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
-    - name: Install Python (and some R) dependencies
-      run: |
-        conda env update --file environment.yml --name lotus_env
-        conda init bash
-    - name: Activate conda environment
-      shell: bash -l {0}
-      run: |
-        conda activate lotus_env
+        auto-activate-base: false
     - name: Install R dependencies
       run: |
         bash environment_non_conda.sh
