trying missing packages installation

--- a/environment_visualizing.yml
+++ b/environment_visualizing.yml
@@ -5,6 +5,8 @@ channels:
   - defaults
   - tmap
 dependencies:
+  - bioconductor-ggtree
+  - bioconductor-ggtreeextra 
   - cmcrameri
   - pandas
   - python=3.*
