--- a/.github/workflows/testing_full.yml
+++ b/.github/workflows/testing_full.yml
@@ -7,35 +7,32 @@ on:
       - main
 jobs:
   build-linux:
-    runs-on: ubuntu-latest
+    name: Linux
+    runs-on: "ubuntu-latest"
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+      - uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.8
-      - name: Install Python dependencies
-        run: |
-          $CONDA/bin/conda install conda-build
-          $CONDA/bin/conda env create --file environment.yml
-      - name: Install R dependencies
+          miniconda-version: "latest"
+          environment-file: environment.yml
+          activate-environment: lotus_env
+          auto-activate-base: false
+      - name: Testing full workflow
+        shell: bash
         run: |
           bash environment_non_conda.sh
-      - name: Run gathering
-        run: |
           make gathering-full-quick
-      - name: Run processing
-        run: |
           MODE=test make curating
-      - name: Run analyzing
-        run: |
           MODE=test make analyzing
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniconda-version: "latest"
+          environment-file: environment_visualization.yml
+          activate-environment: lotus_visualization_env
+          auto-activate-base: false
       - name: Install visualizing Python (and some R) dependencies
         run: |
           $CONDA/bin/conda env create --file environment_visualizing.yml
-      - name: Install visualizing R dependencies
+      - name: Testing visualization
         run: |
           bash environment_visualizing_non_conda.sh
-      - name: Run visualizing
-        run: |
           MODE=test make visualizing
