--- a/.github/workflows/testing_full.yml
+++ b/.github/workflows/testing_full.yml
@@ -32,10 +32,10 @@ jobs:
       - name: Run analyzing
         run: |
           conda run -n lotus_env MODE=test make analyzing
-      - name: Install visualizing Python (and some R) dependencies
+      - name: Install visualizing conda dependencies
         run: |
          $CONDA/bin/conda env create --file environment_visualizing.yml
-      - name: Install visualizing R dependencies
+      - name: Install visualizing non-conda dependencies
         run: |
           conda run -n lotus_visualizing_env bash environment_visualizing_non_conda.sh
       - name: Run visualizing
