--- a/src/1_gathering/translation/Makefile
+++ b/src/1_gathering/translation/Makefile
@@ -5,6 +5,10 @@ gathering-translation-common: ${EXTERNAL_DICTIONARY_SOURCE_PATH}/common/names.ts
 ${EXTERNAL_DICTIONARY_SOURCE_PATH}/common/names.tsv.gz: ${EXTERNAL_DB_SOURCE_PATH}/phenolexplorer/foods.csv ${EXTERNAL_DB_SOURCE_PATH}/foodb/foodb_2020_04_07_csv/Food_copy.csv ${EXTERNAL_DB_SOURCE_PATH}/drduke/Duke-Source-CSV/COMMON_NAMES.csv ${EXTERNAL_DB_SOURCE_PATH}/drduke/Duke-Source-CSV/FNFTAX.csv ${EXTERNAL_TRANSLATION_SOURCE_PATH}/common/backbone-current.zip ${SRC_GATHERING_TRANSLATION_PATH}/common.R ${EXTERNAL_DICTIONARY_SOURCE_PATH}/common/manualSubtraction.tsv
 	cd ${PWD}/src && Rscript ${SRC_GATHERING_TRANSLATION_PATH}/common.R
 
+gathering-translation-common-quick: ${EXTERNAL_DICTIONARY_SOURCE_PATH}/common/names.tsv.gz
+${EXTERNAL_DICTIONARY_SOURCE_PATH}/common/names.tsv.gz: ${EXTERNAL_DB_SOURCE_PATH}/phenolexplorer/foods.csv ${EXTERNAL_DB_SOURCE_PATH}/drduke/Duke-Source-CSV/COMMON_NAMES.csv ${EXTERNAL_DB_SOURCE_PATH}/drduke/Duke-Source-CSV/FNFTAX.csv ${EXTERNAL_TRANSLATION_SOURCE_PATH}/common/backbone-current.zip ${SRC_GATHERING_TRANSLATION_PATH}/common.R ${EXTERNAL_DICTIONARY_SOURCE_PATH}/common/manualSubtraction.tsv
+	cd ${PWD}/src && Rscript ${SRC_GATHERING_TRANSLATION_PATH}/common.R
+
 gathering-translation-tcm: ${EXTERNAL_DICTIONARY_SOURCE_PATH}/tcm/names.tsv.gz
 ${EXTERNAL_DICTIONARY_SOURCE_PATH}/tcm/names.tsv.gz: ${EXTERNAL_DICTIONARY_SOURCE_PATH}/tcm/manualSubtraction.tsv ${EXTERNAL_DICTIONARY_SOURCE_PATH}/latin/plantParts.tsv ${EXTERNAL_DICTIONARY_SOURCE_PATH}/latin/genitive/is.tsv ${EXTERNAL_DICTIONARY_SOURCE_PATH}/latin/genitive/i.tsv ${EXTERNAL_TRANSLATION_SOURCE_PATH}/tcm/Chinese-Medicine-Board---List---Nomenclature-compendium-of-commonly-used-Chinese-herbal-medicines.XLSX ${EXTERNAL_TRANSLATION_SOURCE_PATH}/tcm/tcmid/data/herb-TCMID.v2.01.txt ${EXTERNAL_DB_SOURCE_PATH}/tmmc/compound.xlsx ${SRC_GATHERING_TRANSLATION_PATH}/tcm.R
 	cd ${PWD}/src && Rscript ${SRC_GATHERING_TRANSLATION_PATH}/tcm.R
